--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,9 @@
     "monk": "~1.0.1",
     "jsonp": "~0.2.0",
     "request": "~2.65.0",
-    "async": "~1.5.0"
+    "async": "~1.5.0",
+    "crypto": "0.0.3",
+    "express-session": "~1.12.1",
+    "connect-mongo": "~0.8.2"
   }
 }
