--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "async": "~1.5.0",
     "crypto": "0.0.3",
     "express-session": "~1.12.1",
-    "connect-mongo": "~0.8.2"
+    "connect-mongo": "~0.8.2",
+    "connect-redis": "~3.0.1"
   }
 }
