--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "crypto": "0.0.3",
     "express-session": "~1.12.1",
     "connect-mongo": "~0.8.2",
-    "connect-redis": "~3.0.1"
+    "connect-redis": "~3.0.1",
+    "mathjs": "~2.5.0"
   }
 }
