--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express-session": "~1.12.1",
     "connect-mongo": "~0.8.2",
     "connect-redis": "~3.0.1",
-    "mathjs": "~2.5.0"
+    "mathjs": "~2.5.0",
+    "should": "~8.0.2"
   }
 }
