--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "gulp-react": "~3.1.0",
     "gulp-util": "~3.0.7",
     "mocha": "~2.3.4",
-    "reactify": "^1.1.1"
+    "reactify": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
