--- a/client/package.json
+++ b/client/package.json
@@ -5,5 +5,14 @@
   "dependencies": {
     "react-dom": "~0.14.5",
     "react": "~0.14.5"
+  },
+  "devDependencies": {
+    "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
+    "browserify-shim": "^3.8.11",
+    "gulp": "^3.9.0",
+    "gulp-react": "^3.1.0",
+    "reactify": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
