--- a/server/package.json
+++ b/server/package.json
@@ -24,19 +24,13 @@
     "connect-mongo": "~0.8.2",
     "connect-redis": "~3.0.1",
     "mathjs": "~2.5.0",
-    "should": "~8.0.2",
-    "react-dom": "~0.14.5",
-    "react": "~0.14.5"
+    "should": "~8.0.2"
   },
   "devDependencies": {
     "gulp": "~3.9.0",
-    "gulp-browserify": "^0.5.1",
     "gulp-mocha": "~2.2.0",
     "gulp-nodemon": "~2.0.6",
-    "gulp-react": "~3.1.0",
     "gulp-util": "~3.0.7",
-    "mocha": "~2.3.4",
-    "reactify": "^1.1.1",
-    "vinyl-source-stream": "^1.1.0"
+    "mocha": "~2.3.4"
   }
 }
