--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "antd": "^0.11.2",
-    "react": "~0.14.5",
-    "react-dom": "~0.14.5"
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "request": "^2.67.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
